[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.5", features = ["mysql", "runtime-actix-native-tls", "macros", "chrono"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

